--- a/script.ipynb
+++ b/script.ipynb
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x137e3fcd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12d58d050>"
       ]
      },
      "execution_count": 16,
@@ -588,7 +588,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x13271ab90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x104098c90>"
       ]
      },
      "execution_count": 18,
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,14 +861,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10876/10876 [00:01<00:00, 8135.06it/s]\n"
+      "100%|██████████| 10876/10876 [00:01<00:00, 8378.70it/s]\n"
      ]
     }
    ],
@@ -878,24 +878,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "embedding_dict = {}\n",
-    "with open('./glove/glove.6B.200d.txt','r') as f :\n",
+    "with open('./glove/glove.6B.100d.txt','r') as f :\n",
     "    for line in f:\n",
     "        values = line.split()\n",
     "        word = values[0]\n",
     "        vectors = np.asarray(values[1:], 'float32')\n",
     "        embedding_dict[word] = vectors\n",
     "f.close()\n",
-    "Glove_Dimension = 200 #8/16change Glove_Dimension to 200d "
+    "Glove_Dimension = 100 #8/16change Glove_Dimension to 200d "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -937,14 +937,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20342/20342 [00:00<00:00, 403704.54it/s]\n"
+      "100%|██████████| 20342/20342 [00:00<00:00, 466173.82it/s]\n"
      ]
     }
    ],
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -976,17 +976,17 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_1 (Embedding)      (None, 50, 200)           4068600   \n",
+      "embedding_1 (Embedding)      (None, 50, 100)           2034300   \n",
       "_________________________________________________________________\n",
-      "spatial_dropout1d_1 (Spatial (None, 50, 200)           0         \n",
+      "spatial_dropout1d_1 (Spatial (None, 50, 100)           0         \n",
       "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                (None, 64)                67840     \n",
+      "lstm_1 (LSTM)                (None, 256)               365568    \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 1)                 65        \n",
+      "dense_1 (Dense)              (None, 1)                 257       \n",
       "=================================================================\n",
-      "Total params: 4,136,505\n",
-      "Trainable params: 67,905\n",
-      "Non-trainable params: 4,068,600\n",
+      "Total params: 2,400,125\n",
+      "Trainable params: 365,825\n",
+      "Non-trainable params: 2,034,300\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -1005,7 +1005,7 @@
     "\n",
     "model.add(embedding)\n",
     "model.add(SpatialDropout1D(0.2))\n",
-    "model.add(LSTM(128, dropout=0.2, recurrent_dropout=0.2))\n",
+    "model.add(LSTM(256, dropout=0.2, recurrent_dropout=0.2))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
     "optimizer = Adam(learning_rate = 1e-5)\n",
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1056,36 +1056,8 @@
      "output_type": "stream",
      "text": [
       "Train on 6471 samples, validate on 1142 samples\n",
-      "Epoch 1/15\n",
-      "6471/6471 [==============================] - 31s 5ms/step - loss: 0.6912 - accuracy: 0.5729 - val_loss: 0.6904 - val_accuracy: 0.5473\n",
-      "Epoch 2/15\n",
-      "6471/6471 [==============================] - 29s 5ms/step - loss: 0.6584 - accuracy: 0.6186 - val_loss: 0.5876 - val_accuracy: 0.7347\n",
-      "Epoch 3/15\n",
-      "6471/6471 [==============================] - 28s 4ms/step - loss: 0.5743 - accuracy: 0.7317 - val_loss: 0.5452 - val_accuracy: 0.7627\n",
-      "Epoch 4/15\n",
-      "6471/6471 [==============================] - 26s 4ms/step - loss: 0.5581 - accuracy: 0.7458 - val_loss: 0.5304 - val_accuracy: 0.7644\n",
-      "Epoch 5/15\n",
-      "6471/6471 [==============================] - 28s 4ms/step - loss: 0.5490 - accuracy: 0.7537 - val_loss: 0.5231 - val_accuracy: 0.7697\n",
-      "Epoch 6/15\n",
-      "6471/6471 [==============================] - 30s 5ms/step - loss: 0.5539 - accuracy: 0.7484 - val_loss: 0.5164 - val_accuracy: 0.7767\n",
-      "Epoch 7/15\n",
-      "6471/6471 [==============================] - 29s 4ms/step - loss: 0.5348 - accuracy: 0.7619 - val_loss: 0.5122 - val_accuracy: 0.7750\n",
-      "Epoch 8/15\n",
-      "6471/6471 [==============================] - 27s 4ms/step - loss: 0.5313 - accuracy: 0.7633 - val_loss: 0.5083 - val_accuracy: 0.7767\n",
-      "Epoch 9/15\n",
-      "6471/6471 [==============================] - 27s 4ms/step - loss: 0.5366 - accuracy: 0.7612 - val_loss: 0.5070 - val_accuracy: 0.7811\n",
-      "Epoch 10/15\n",
-      "6471/6471 [==============================] - 27s 4ms/step - loss: 0.5311 - accuracy: 0.7653 - val_loss: 0.5034 - val_accuracy: 0.7837\n",
-      "Epoch 11/15\n",
-      "6471/6471 [==============================] - 27s 4ms/step - loss: 0.5238 - accuracy: 0.7688 - val_loss: 0.5050 - val_accuracy: 0.7811\n",
-      "Epoch 12/15\n",
-      "6471/6471 [==============================] - 27s 4ms/step - loss: 0.5238 - accuracy: 0.7682 - val_loss: 0.4984 - val_accuracy: 0.7828\n",
-      "Epoch 13/15\n",
-      "6471/6471 [==============================] - 27s 4ms/step - loss: 0.5211 - accuracy: 0.7708 - val_loss: 0.4980 - val_accuracy: 0.7828\n",
-      "Epoch 14/15\n",
-      "6471/6471 [==============================] - 31s 5ms/step - loss: 0.5202 - accuracy: 0.7682 - val_loss: 0.4969 - val_accuracy: 0.7855\n",
-      "Epoch 15/15\n",
-      "6471/6471 [==============================] - 28s 4ms/step - loss: 0.5157 - accuracy: 0.7745 - val_loss: 0.4946 - val_accuracy: 0.7863\n"
+      "Epoch 1/30\n",
+      "1784/6471 [=======>......................] - ETA: 1:01 - loss: 0.6922 - accuracy: 0.5656"
      ]
     }
    ],
@@ -1095,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,83 +1082,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  target\n",
-       "0   0       1\n",
-       "1   2       1\n",
-       "2   3       1\n",
-       "3   9       1\n",
-       "4  11       1"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "submission.head()\n",
     "\n",
     "#816 16:00 change epoch to 30 and set lstm unit 64 -> 128 \n",
-    "#glove use 100d"
+    "#glove use 200d \n",
+    "\n",
+    "#816 18:00 change epoch to 30 and set lstm unit 128 -> 256 \n",
+    "#glove use 100d "
    ]
   },
   {
